Put hostname into status bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,7 +29,7 @@ setw -g window-status-activity-fg colour19
 
 # Put status on the right side.
 set -g status-left ""
-set -g status-right " #S #F "
+set -g status-right " #F #S #h "
 
 # Window status: index and path.
 set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
