--- a/tmux.conf
+++ b/tmux.conf
@@ -1,14 +1,14 @@
 set -g default-terminal "screen-256color"
 
-set -s escape-time 0        # Don't treat Esc as Alt.
-set -g history-limit 100000 # Long history.
-set -g status-interval 1    # Update status every 1 sec.
-set -g base-index 1         # 1-based indexing.
-set -g renumber-windows on  # Renumber after creating/destroying windows.
-set -g status-keys emacs    # Normal keys when entering a command.
-setw -g mode-keys vi        # vi-like keys for dialogs.
+set -s escape-time 0        # Don't treat Esc as Alt
+set -g history-limit 100000 # Long history
+set -g status-interval 1    # Update status every 1 sec
+set -g base-index 1         # 1-based indexing
+set -g renumber-windows on  # Renumber after creating/destroying windows
+set -g status-keys emacs    # Normal keys when entering a command
+setw -g mode-keys vi        # vi-like keys for dialogs
 
-# Color theme.
+# Color theme
 set -g mode-bg colour17
 set -g mode-fg colour21
 set -g status-bg colour18
@@ -27,19 +27,19 @@ setw -g window-status-current-attr bold
 setw -g window-status-activity-bg colour7
 setw -g window-status-activity-fg colour19
 
-# Put status on the right side.
+# Put status on the right side
 set -g status-left ""
 set -g status-right " #F #S #h "
 
-# Window status: index and path.
+# Window status: index and path
 set -g window-status-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
 set -g window-status-current-format ' #I #(pwd="#{pane_current_path}"; echo ${pwd####*/}) '
 
-# Set window title to current path.
+# Set window title to current path
 set -g set-titles on
 set -g set-titles-string "#{pane_current_path}"
 
-# Basic key bindings.
+# Basic key bindings
 set -g prefix M-t
 bind M-t send-prefix
 bind -n C-M-r source-file ~/.tmux.conf \; display-message "Config reloaded."
@@ -47,12 +47,12 @@ bind -n C-M-r source-file ~/.tmux.conf \; display-message "Config reloaded."
 bind -n M-: command-prompt
 bind -n M-, command-prompt "rename-session %%"
 
-# Session control.
+# Session control
 bind -n M-a choose-session
 bind -n M-d detach
 bind -n M-e new-session -c "#{pane_current_path}"
 
-# Selection, copying, pasting.
+# Selection, copying, pasting
 unbind-key -t vi-copy v
 bind -n M-u copy-mode
 bind -n M-p run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux paste-buffer"
@@ -60,7 +60,7 @@ bind -t vi-copy y copy-pipe 'xclip -in -selection primary'
 bind -t vi-copy v begin-selection
 bind -t vi-copy 'C-v' rectangle-toggle
 
-# Pane management.
+# Pane management
 bind -n M-s split-window -c "#{pane_current_path}"
 bind -n M-m resize-pane -Z
 bind -n M-o next-layout
@@ -75,14 +75,14 @@ bind -n M-C-i join-pane -t :-1
 bind -n M-C-o join-pane -t :+1
 bind -n M-C-b break-pane
 
-# Readjust pane layout.
+# Readjust pane layout
 bind -n M-Enter run-shell \
   ' tmux setw main-pane-height $((`tmux display-message -p "#{window_height}"`/2-1)) \
   ; tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)) \
   ; tmux next-layout \
   ; tmux previous-layout'
 
-# Window management.
+# Window management
 bind -n M-w new-window -a -c "#{pane_current_path}"
 bind -n M-j previous-window
 bind -n M-k next-window
