Add a shortcut for kill-pane

--- a/tmux.conf
+++ b/tmux.conf
@@ -74,6 +74,7 @@ bind -n M-up resize-pane -U 1
 bind -n M-C-i join-pane -t :-1
 bind -n M-C-o join-pane -t :+1
 bind -n M-C-b break-pane
+bind -n M-C-d kill-pane
 
 # Readjust pane layout
 bind -n M-Enter run-shell \
