--- a/tmux.conf
+++ b/tmux.conf
@@ -43,14 +43,13 @@ set -g set-titles-string "#{pane_current_path}"
 set -g prefix M-t
 bind M-t send-prefix
 bind -n C-M-r source-file ~/.tmux.conf \; display-message "Config reloaded."
-
 bind -n M-: command-prompt
-bind -n M-, command-prompt "rename-session %%"
 
 # Session control
 bind -n M-a choose-session
 bind -n M-d detach
 bind -n M-e new-session -c "#{pane_current_path}"
+bind -n M-, command-prompt "rename-session %%"
 
 # Selection, copying, pasting
 unbind-key -t vi-copy v
@@ -63,8 +62,9 @@ bind -t vi-copy 'C-v' rectangle-toggle
 # Pane management
 bind -n M-s split-window -c "#{pane_current_path}"
 bind -n M-m resize-pane -Z
-bind -n M-o next-layout
-bind -n M-i previous-layout
+bind -n M-i run-shell 'tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)); tmux select-layout main-vertical'
+# bind -n M-i select-layout main-vertical
+bind -n M-o select-layout tiled
 bind -n M-n select-pane -t +1
 bind -n M-C-n swap-pane -s +1
 bind -n M-Left resize-pane -L 1
@@ -75,13 +75,6 @@ bind -n M-C-i join-pane -t :-1
 bind -n M-C-o join-pane -t :+1
 bind -n M-C-b break-pane
 bind -n M-C-d kill-pane
-
-# Readjust pane layout
-bind -n M-Enter run-shell \
-  ' tmux setw main-pane-height $((`tmux display-message -p "#{window_height}"`/2-1)) \
-  ; tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)) \
-  ; tmux next-layout \
-  ; tmux previous-layout'
 
 # Window management
 bind -n M-w new-window -a -c "#{pane_current_path}"
