--- a/tmux.conf
+++ b/tmux.conf
@@ -52,12 +52,10 @@ bind -n M-e new-session -c "#{pane_current_path}"
 bind -n M-, command-prompt "rename-session %%"
 
 # Selection, copying, pasting
-unbind-key -t vi-copy v
 bind -n M-u copy-mode
 bind -n M-p run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux paste-buffer"
-bind -t vi-copy y copy-pipe 'xclip -in -selection primary'
-bind -t vi-copy v begin-selection
-bind -t vi-copy 'C-v' rectangle-toggle
+bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection primary'
+bind -T copy-mode-vi v send -X begin-selection
 
 # Pane management
 bind -n M-s split-window -c "#{pane_current_path}"
