--- a/tmux.conf
+++ b/tmux.conf
@@ -54,7 +54,7 @@ bind -n M-, command-prompt "rename-session %%"
 # Selection, copying, pasting
 bind -n M-u copy-mode
 bind -n M-p run-shell "tmux set-buffer \"$(xclip -o -selection primary)\"; tmux paste-buffer"
-bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection primary'
+bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection primary' \; send -X clear-selection \; send -X cancel
 bind -T copy-mode-vi v send -X begin-selection
 
 # Pane management
