--- a/tmux.conf
+++ b/tmux.conf
@@ -9,23 +9,14 @@ set -g status-keys emacs    # Normal keys when entering a command
 setw -g mode-keys vi        # vi-like keys for dialogs
 
 # Color theme
-set -g mode-bg colour17
-set -g mode-fg colour21
-set -g status-bg colour18
-set -g status-fg colour8
-set -g message-bg colour19
-set -g message-fg colour7
-set -g pane-border-bg colour0
-set -g pane-border-fg colour19
-set -g pane-active-border-bg colour0
-set -g pane-active-border-fg colour17
-setw -g window-status-bg colour18
-setw -g window-status-fg colour20
-setw -g window-status-current-bg colour19
-setw -g window-status-current-fg colour16
-setw -g window-status-current-attr bold
-setw -g window-status-activity-bg colour7
-setw -g window-status-activity-fg colour19
+set -g mode-style bg=colour17,fg=colour21
+set -g status-style bg=colour18,fg=colour8
+set -g message-style bg=colour19,fg=colour7
+set -g pane-border-style bg=colour0,fg=colour19
+set -g pane-active-border-style bg=colour0,fg=colour17
+setw -g window-status-style bg=colour18,fg=colour20
+setw -g window-status-current-style bg=colour19,fg=colour16,bold
+setw -g window-status-activity-style bg=colour7,fg=colour19
 
 # Put status on the right side
 set -g status-left ""
