Disable terminal bell

--- a/kitty.conf
+++ b/kitty.conf
@@ -2,6 +2,7 @@ scrollback_lines 10000
 initial_window_width  639
 initial_window_height 400
 remember_window_size  no
+enable_audio_bell no
 
 font_size        12.0
 font_family      Fantasque Sans Mono Regular
