dwindle layout for tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -51,9 +51,10 @@ bind -T copy-mode-vi v send -X begin-selection
 # Pane management
 bind -n M-s split-window -c "#{pane_current_path}"
 bind -n M-m resize-pane -Z
-bind -n M-i run-shell 'tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)); tmux select-layout main-vertical'
-# bind -n M-i select-layout main-vertical
-bind -n M-o select-layout tiled
+# bind -n M-i run-shell 'tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)); tmux select-layout main-vertical'
+# bind -n M-o select-layout tiled
+bind -n M-i run-shell '~/work/dotfiles/tmux-layout-dwindle'
+bind -n M-o run-shell '~/work/dotfiles/tmux-layout-dwindle'
 bind -n M-n select-pane -t +1
 bind -n M-C-n swap-pane -s +1
 bind -n M-Left resize-pane -L 1
