Horizontal/vertical split

--- a/tmux.conf
+++ b/tmux.conf
@@ -47,8 +47,8 @@ bind -T copy-mode-vi y send -X copy-pipe 'xclip -in -selection primary' \; send 
 bind -T copy-mode-vi v send -X begin-selection
 
 # Pane management
-bind -n M-o split-window -c "#{pane_current_path}"
-bind -n M-i run-shell 'tmux setw main-pane-width $((`tmux display-message -p "#{window_width}"`/2)); tmux select-layout main-vertical'
+bind -n M-i split-window -h -c "#{pane_current_path}"
+bind -n M-o split-window -v -c "#{pane_current_path}"
 bind -n M-Space run-shell "$DOTFILES/tmux-layout"
 bind -n M-n select-pane -t +1
 bind -n M-O select-pane -D \; swap-pane -s '!' \; select-pane -D
