--- a/tmux.conf
+++ b/tmux.conf
@@ -49,7 +49,7 @@ bind -T copy-mode-vi v send -X begin-selection
 # Pane management
 bind -n M-i split-window -h -c "#{pane_current_path}"
 bind -n M-o split-window -v -c "#{pane_current_path}"
-bind -n M-Space run-shell "$DOTFILES/tmux-layout"
+bind -n M-Space run-shell "~/dotfiles/tmux-layout"
 bind -n M-n select-pane -t +1
 bind -n M-O select-pane -D \; swap-pane -s '!' \; select-pane -D
 bind -n M-I select-pane -L \; swap-pane -s '!' \; select-pane -L
