--- a/tmux.conf
+++ b/tmux.conf
@@ -53,15 +53,21 @@ bind -n M-Space run-shell "~/dotfiles/tmux-layout"
 bind -n M-n select-pane -t +1
 bind -n M-O select-pane -D \; swap-pane -s '!' \; select-pane -D
 bind -n M-I select-pane -L \; swap-pane -s '!' \; select-pane -L
-bind -n M-C-Left resize-pane -L 1
-bind -n M-C-Right resize-pane -R 1
-bind -n M-C-Down resize-pane -D 1
-bind -n M-C-Up resize-pane -U 1
 bind -n M-u resize-pane -Z
 bind -n M-C-j join-pane -t :-1
 bind -n M-C-k join-pane -t :+1
 bind -n M-C-b break-pane
 bind -n M-C-w kill-pane
+
+" Resizing
+bind -n M-C-Left resize-pane -L 1
+bind -n M-S-Left resize-pane -L 1
+bind -n M-C-Right resize-pane -R 1
+bind -n M-S-Right resize-pane -R 1
+bind -n M-C-Down resize-pane -D 1
+bind -n M-S-Down resize-pane -D 1
+bind -n M-C-Up resize-pane -U 1
+bind -n M-S-Up resize-pane -U 1
 
 # Window management
 bind -n M-t new-window -a -c "#{pane_current_path}"
