Syntax error fix

--- a/tmux.conf
+++ b/tmux.conf
@@ -59,7 +59,7 @@ bind -n M-C-k join-pane -t :+1
 bind -n M-C-b break-pane
 bind -n M-C-w kill-pane
 
-" Resizing
+# Resizing
 bind -n M-C-Left resize-pane -L 1
 bind -n M-S-Left resize-pane -L 1
 bind -n M-C-Right resize-pane -R 1
