--- a/tmux.conf
+++ b/tmux.conf
@@ -53,7 +53,7 @@ bind -n M-Space run-shell "~/dotfiles/tmux-layout"
 bind -n M-n select-pane -t +1
 bind -n M-O select-pane -D \; swap-pane -s '!' \; select-pane -D
 bind -n M-I select-pane -L \; swap-pane -s '!' \; select-pane -L
-bind -n M-u resize-pane -Z
+bind -n M-Enter resize-pane -Z
 bind -n M-C-j join-pane -t :-1
 bind -n M-C-k join-pane -t :+1
 bind -n M-C-b break-pane
